
syntax = "proto3";

package Party;

message C2S {
  oneof msg {
    Join join = 1;
    Part part = 2;
    Data data = 3;
  }
}

message S2C {
  oneof msg {
    UserJoin join = 1;
    UserPart part = 2;
    PartyData data = 3;
  }
}

message Join {
  int64 partyId = 1;
  int64 memberId = 2;
}

message UserJoin {
  int64 partyId = 1;
  int64 memberId = 2;
}

message Part {
}

message UserPart {
  int64 memberId = 2;
}

message Data {
  bytes data = 1;
  string type = 2;
}

message PartyData {
  int64 partyId = 1;
  int64 memberId = 2;
  bytes data = 3;
  string type = 4;
}
